add page transitions and responsive design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,6 @@ body {
   color: rgb(var(--foreground-rgb));
 }
 
-
 @keyframes appear-slide-up-fade {
   0% {
     transform: translateY(20px);
@@ -31,5 +30,17 @@ body {
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+@keyframes title-appear-slide {
+  0% {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+
+  70% {
+    transform: translateY(0);
+    opacity: 1
   }
 }
